--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Samuel Michelet, chef de projet digital et développeur web et mobile. Je vous accompagne dans votre projet numérique, de sa conception à sa promotion et à l'audit qualité/sécurité de votre projet web et mobile.">
+    <meta name="author" content="Samuel Michelet">
+    <meta name="keywords" content="Développeur web et mobile, chef de projet digital en bourgogne, auditeur web">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,500;0,700;1,500&amp;family=Quicksand:wght@700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
