--- a/creersonblog.html
+++ b/creersonblog.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Vous vous demandez si avoir un blog pour votre  entreprise ou votre projet est pertinent?
+    Vous ne savez pas comment utiliser un blog pour obtenir de bons résultats mesurables?">
+    <meta name="author" content="Samuel Michelet">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,500;0,700;1,500&amp;family=Quicksand:wght@700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Blog de samuel michelet chef de projet digital</title>
+    <title>Pourquoi et comment créer son blog</title>
 </head>
 <body>
     <nav id="top-nav">
