--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Développeur web et mobile, chef de projet digital en bourgogne, auditeur web">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,500;0,700;1,500&amp;family=Quicksand:wght@700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Samuel Michelet|Chef de projet digital</title>
 </head>
 <body>
     <nav id="top-nav">
@@ -106,7 +106,7 @@
                 <p>Vous êtes une startup</p>
                 <h2>à la recherche d'un chef de projet junior?</h2>
 
-                <a class="cta">
+                <a href="#modal-startup" class="cta">
                     Lisez ceci
                 </a>
             </div>
@@ -153,9 +153,31 @@
         <a href="#!" role="dialog" alt="lien pour ouvrir une modale" class="modal-overlay"></a>
         <div class="modal-dialog modal-dialog-lg">
             <a href="#!" class="modal-close">&times;</a>
-            <h3>RGPD</h3>
+            <h3>RÉFLEXION ET STRATÉGIE DE DÉVELOPPEMENT SUR INTERNET</h3>
             <div class="modal-content newspaper">
-                <p>je vous rassure tout de suite vos données personnelles n’encourent aucun risque puisque ce site n’utilise aucune de vos données, ni cookies ni aucun outils analytics. La meilleur façon d’avoir un web libre c’est de respecter les internautes, ceci n’est pas un engagement mais un mode de vie.</p>
+                
+                <p>
+                    Vous souhaitez développer une stratégie de communication digitale pour votre marque ?
+                    Vous avez besoin d’un prestataire externe pour vous conseiller dans les plateformes et outils à utiliser ?
+                </p>
+                <p>
+                    Avant de se lancer dans la création d’un site internet ou dans une communication sur les réseaux sociaux pour votre marque, vous devez réfléchir au développement d’une stratégie digitale globale. Il est important de savoir où vous allez et pourquoi. </p><p>Votre image de marque ne doit pas être dégradée par une mauvaise utilisation des plateformes en ligne. En tant que Digital Content Manager en freelance, je peux vous aider à développer une stratégie de communication sur internet efficace et optimisée selon votre budget et vos objectifs.</p>
+            </div>
+        </div>
+    </div>
+    <div data-ml-modal id="modal-startup">
+        <a href="#!" role="dialog" alt="lien pour ouvrir une modale" class="modal-overlay"></a>
+        <div class="modal-dialog modal-dialog-lg">
+            <a href="#!" class="modal-close">&times;</a>
+            <h3>CONSEIL STRATÉGIQUE EN COMMUNICATION DIGITALER</h3>
+            <div class="modal-content newspaper">
+                    <p>
+                        Si vous avez besoin d’idées neuves pour votre client, je suis l’homme qu’il vous faut. Créatif, ingénieux et malin, je peux vous apporter une vision extérieur tout en respectant les contraintes liées à votre brief. De l’analyse concurrentielle à la rédaction du contenu en ligne, je peux vous aider à développer une stratégie de communication innovante et efficace.
+                        
+                        Les possibilités sont multiples, en tant que chef de projet digital, je vous conseille dans le choix des outils digitaux à utiliser pour optimiser la communication de votre client.</p>
+                        <h3>AUDIT ET BENCHMARK</h3>
+                        <p>
+                            Analyser les concurrents et les tendances permettra d’optimiser le positionnement et la ligne éditoriale de votre client. Des préconisations objectives et réalistes doivent être mises en place et testées afin de créer une expérience utilisateur efficace.</p></p>
             </div>
         </div>
     </div>
